updated bg and favicon

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-4<!doctype html>
+<!doctype html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -11,13 +11,17 @@
     </head>
     <body>
 		<section id="about">
-		    <img id="self" src="images/180410-self.png">
+		    <img id="self" src="images/180410-me.png">
 			<div id="hello">
-				<h3 class="title">Hi, I’m Laurie Waxman.</h3>
-				<h2 class="selectedHeader">I’m a Canadian designer, technologist and graphic artist based in Brooklyn. My experience covers graphic design, experience design, creative coding, illustration, front-end development—and you’re in luck! I’m currently looking for a full-time position.</h2>
-				<p><i class="fa fa-envelope-square"></i>&nbsp;&nbsp;<a href="mailto:hello@lauriewaxman.com">hello@lauriewaxman.com</a>
-				</br><i class="fa fa-tumblr-square"></i>&nbsp;&nbsp;<a href="http://blog.lauriewaxman.com">things I’m working on</a>
-				</br><i class="fa fa-file"></i>&nbsp;&nbsp;<a href="resume.pdf">my resume</a></p>
+				<h3 class="title">Hi, I&rsquo;m Laurie Waxman,</h3>
+				<p>A versatile graphic designer and technologist with a focus on user experience, innovation and stand-out visuals, presently seeking a full-time position.</p>
+				<p>Since graduating top of my class with a degree in Design and Technology from Parsons New School for Design, I’ve worked as a designer on a variety of digital and physical experiences. I&rsquo;m a trained visual designer with an interest in tech, and an unparalleled ability to figure things out and get things done.</p>
+				<p>In my down time, I read science fiction, engage in activism, practice illustration, and attempt to master the German language.</p>
+				<p>Former designer at <a href="">Midnight Commercial.</a></p>
+				<p>
+					<a href="mailto:hello@lauriewaxman.com" target="_blank">&#x21E8;&nbsp;&nbsp;hello@lauriewaxman.com</a>
+					<br><a href="resume.pdf">&#x21E8;&nbsp;&nbsp;view my resume</a>
+				</p>
 			</div>
 		</section>
 		<section id="footer">
@@ -26,7 +30,7 @@
 		<menu>
 			<div class="buttons">
 				<h3><a id="homeButton" href="index.html">Laurie Waxman</a></h3>
-				<h3><a id="workButton" href="index.html#work">Work</a> <a id="aboutButton" href="about.html">About</a></h3>
+				<h3><a id="workButton" href="work.html">Work</a> <a id="aboutButton" href="about.html">About</a></h3>
 			</div>
 			<img id="menuToggle" src="images/_menuToggle.png" alt="menu">
 		</menu>
