--- a/work.html
+++ b/work.html
@@ -10,13 +10,13 @@
     </head>
     <body>
 		<section id="work">
-      		<div id="moreWork">
+      		<div class="moreWork">
       		<h3 class="sectionTitle">Selected Work</h3>
 				<div class="project">
 					<a href="work/gentex.html">
 						<img src="images/gentex-00s.png" alt="">
 						<h3 class="title">Gentex Vehicle Simulator</h3>
-						<h2 class="selectedHeader">Showing off Gentex technologies in a user-friendly set-up.</h2>
+						<h2 class="selectedHeader">Showing off Gentex technologies in an immersive experience.</h2>
 						<h3 class="skills">user experience, visual design</h3>
 					</a>
 				</div>
@@ -39,8 +39,8 @@
 				<div class="project">
 					<a href="work/patron.html">
 						<img src="images/patron-00s.png" alt="">
-						<h3 class="title">The Patron Experience</h3>
-						<h2 class="selectedHeader">Educating customers on Patron tequila in augmented reality.</h2>
+						<h3 class="title">The Patrón Experience</h3>
+						<h2 class="selectedHeader">Educating customers on Patrón tequila in augmented reality.</h2>
 						<h3 class="skills">user experience, visual design, 3d</h3>
 					</a>
 				</div>
@@ -57,7 +57,7 @@
 						<img src="images/alphabet-00s.png" alt="">
 						<h3 class="title">Alphabet Iteration</h3>
 						<h2 class="selectedHeader">A typographic experiment.</h2>
-						<h3 class="skills">typography, creative coding, print, interactive</h3>
+						<h3 class="skills">typography, creative coding, print</h3>
 					</a>
 				</div>
 				<div class="project">
@@ -72,7 +72,7 @@
 					<a href="work/sproutkernel.html">
 						<img src="images/sproutkernel-00s.png" alt="">
 						<h3 class="title">Sprout & Kernel</h3>
-						<h2 class="selectedHeader">Mock rebranding of a nut-based cheese company.</h2>
+						<h2 class="selectedHeader">A new visual identity for a nut-based cheese company.</h2>
 						<h3 class="skills">branding, lettering, web design</h3>
 					</a>
 				</div>
@@ -85,7 +85,7 @@
   					</a>
 				</div>
       		</div>
-      		<div id="moreWork">
+      		<div class="moreWork">
       			<h3 class="sectionTitle">Everything Else</h3>
       			<div class="project">
       				<a href="work/bookcovers.html">
@@ -197,7 +197,7 @@
 		<menu>
 			<div class="buttons">
 				<h3><a id="homeButton" href="index.html">Laurie Waxman</a></h3>
-				<h3><a id="workButton" href="index.html#work">Work</a> <a id="aboutButton" href="about.html">About</a></h3>
+				<h3><a id="workButton" href="work.html">Work</a> <a id="aboutButton" href="about.html">About</a></h3>
 			</div>
 			<img id="menuToggle" src="images/_menuToggle.png" alt="menu">
 		</menu>
