--- a/work/airquality.html
+++ b/work/airquality.html
@@ -15,9 +15,7 @@
 				<h2 class="selectedHeader">Painting with live air pollution data from around the world.</h2>
 				<h3 class="skills">creative coding, data, web design</h3>
 			</div>
-			<p>A drawing tool that uses real <a href="https://en.wikipedia.org/wiki/Air_quality_index">AQI (Air Quality Index)</a> data from a chosen list of cities to control the brush; the more polluted the air, the darker and broader the brush. There is no way to clear the drawing (other than using the least polluted city's brush as an eraser of sorts)&mdash;an obvious enough metaphor.</p>
-			<p>Uses the <a href="http://aqicn.org/here/">aqicn.org</a> API.</p>
-			<p><a href="../pages/airquality/">Give it a go yourself.</a></p>
+			<p>A experimental drawing tool that uses real-time <a href="https://en.wikipedia.org/wiki/Air_quality_index">AQI (Air Quality Index)</a> data from around the world. Rather than letting users choose the size and colour of their brush, they instead choose one of the listed cities, and the air quality in that city <span class="italic">at that moment</span> determines the brush&rsquo;s qualities. Cleaner air results in a small pale brush, more polluted air results in a broad dark cloud.</p>
 			<div class="img-group">
                 <img class="big" src="../images/airquality.jpg">     
             </div>
@@ -25,7 +23,7 @@
 		<section id="nextProject">
 			<div class="header">
 				<a href="bookcovers.html">
-					<p>next project</p>
+					<p>&#x21E8;</p>
 					<h2 class="selectedHeader">Book Covers</h2>
 					<h3 class="skills">design</h3>
 				</a>
