--- a/work/alphabet.html
+++ b/work/alphabet.html
@@ -13,36 +13,34 @@
 			<div class="header">
 				<h3 class="title">Alphabet Iteration</h3>
 				<h2 class="selectedHeader">A typographic experiment.</h2>
-				<h3 class="skills">typography, creative coding, print, interactive</h3>
+				<h3 class="skills">typography, creative coding, print</h3>
 			</div>
-			<p>A multipart typographic experiment inspired by anonymous interactions on the internet. It uses a roughed up version of <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">Conway’s Game of Life</a> to create the effect.</p>
-                <div class="img-group">
-                    <img class="big lazy" src="../images/alphabet2.jpg" alt="alphabet iteration poster">  
-                    <img class="big lazy" src="../images/alphabet1.gif" alt="alphabet iteration animated">
-                </div>
-                <p>The internet's anonymous hive-mind mentality can often get out of control. In December 2013, Justine Sacco&mdash;senior director of corporate communications at IAC&mdash;made a rather daft mistake. Just before boarding a plane, she posted a tweet. Sam Biddle, an employee at Gawker, happened on the Sacco’s tweet and shared it.</p>
-                <blockquote>“And now, a funny Holiday joke from IAC's PR Boss: 'Going to Africa. Hope I don’t get AIDS. Just kidding. I’m white!'</br>— Justine Sacco (@JustinSacco) December 20, 2013”</blockquote>
-                <p>With Biddle’s following, the tweet spread like wildfire, and Sacco was suddenly subject to hate-mail, threats and other forms of cyber-bullying. Within hours, thousands of people had seen and shared her tweet, but while all this was happening, Justine Sacco sat comfortably on a plane destined for South Africa and her own downfall.</p>
-                <p>Using this case as an example, I applied my typographical distortion to the replies to Sam Biddles repost, in escalating iterations to emulate the procession of the event. The whole book was generated in Processing, and is bound in French-fold, with the original undistorted replies hidden in the interiors.</p>
-                <div class="img-group">
-                    <img class="big lazy" src="../images/alphamata1.jpg" alt="Justine Sacco book">
-                    <img class="big lazy" src="../images/alphamata2.jpg" alt="Justine Sacco book">
-                    <img class="big lazy" src="../images/alphamata3.jpg" alt="Justine Sacco book">
-                    <img class="big lazy" src="../images/alphamata4.jpg" alt="Justine Sacco book">
-                    <img class="big lazy" src="../images/alphamata5.jpg" alt="Justine Sacco book">
-                    <img class="big lazy" src="../images/alphamata6.jpg" alt="Justine Sacco book">
-                    <img class="big lazy" src="../images/alphamata7.jpg" alt="Justine Sacco book">
-                    <img class="big lazy" src="../images/alphamata8.jpg" alt="Justine Sacco book">
-                </div>
-                <p>While I enjoyed making the book, I thought the distortion could be better connected the the words it was affecting. With this in mind, I built an interactive web experiment using <a href="http://www.alchemyapi.com/api/sentiment-analysis">sentiment analysis</a> to distort comments left by users.</p> 
-                <div class="img-group">
-                    <img class="big lazy" src="../images/alphabet_interactive.png" alt="interactive version">
-                </div>
+			<p>People say dumb stuff all the time; I know I&rsquo;ve said some dumb things in my life I wish I hadn&rsquo;t, and I&rsquo;m sure you have too. Normally, you get to apologize, or hide under the covers until it blows over (though I recommend the former). Sometimes, the internet finds some dumb thing you said, decides you&rsquo;re the devil incarnate, and destroys your life. One dumb remark, and it&rsquo;s all gone. This project is an experiment to visually represent this phenomenon, how a few words can spiral everything out of control.</p>
+            <div class="img-group">
+                <img class="big lazy" src="../images/alphabet2.jpg" alt="alphabet iteration poster">  
+                <img class="big lazy" src="../images/alphabet1.gif" alt="alphabet iteration animated">
+            </div>
+            <h3 class="title">The Book</h3>
+            <p>In December 2013, Justine Sacco—a senior director of corporate communications at IAC—made a mistake. Just before boarding a plane, she posted the following tweet:</p>
+            <p class="blockquote">&rdquo;Going to Africa. Hope I don’t get AIDS. Just kidding. I’m white!&ldquo;
+            <br>— Justine Sacco (@JustinSacco) December 20, 2013</p>
+            <p>Sam Biddle, an employee at Gawker, happened on the Sacco’s tweet and shared it. With Biddle’s following, the tweet spread like wildfire, and Sacco was suddenly subject to hate-mail, threats and other forms of cyber-bullying. Within hours, thousands of people had seen and shared her tweet, but while all this was happening, Justine Sacco sat comfortably on a plane destined for South Africa, unaware her life was falling apart, unable to explain herself or apologize.</p>
+            <p>Using this case as an example, I applied a typographical distortion to the replies to Sam Biddles repost, in escalating iterations to emulate the procession of the event. The book is bound French-fold, with the original undistorted replies hidden in the page interiors.</p>
+            <div class="img-group">
+                <img class="big lazy" src="../images/alphamata1.jpg" alt="Justine Sacco book">
+                <img class="big lazy" src="../images/alphamata2.jpg" alt="Justine Sacco book">
+                <img class="big lazy" src="../images/alphamata3.jpg" alt="Justine Sacco book">
+                <img class="big lazy" src="../images/alphamata4.jpg" alt="Justine Sacco book">
+                <img class="big lazy" src="../images/alphamata5.jpg" alt="Justine Sacco book">
+                <img class="big lazy" src="../images/alphamata6.jpg" alt="Justine Sacco book">
+                <img class="big lazy" src="../images/alphamata7.jpg" alt="Justine Sacco book">
+                <img class="big lazy" src="../images/alphamata8.jpg" alt="Justine Sacco book">
+            </div>
 		</section>
 		<section id="nextProject">
 			<div class="header">
 				<a href="sol3.html">
-					<p>next project</p>
+					<p>&#x21E8;</p>
 					<h3 class="title">Sol-3</h3>
 					<h2 class="selectedHeader">A dystopian illustrated art book.</h2>
 					<h3 class="skills">illustration, print</h3>
