--- a/work/ardent.html
+++ b/work/ardent.html
@@ -14,7 +14,7 @@
 				<h2 class="selectedHeader">Ardent</h2>
 				<h3 class="skills">editorial, illustration, print</h3>
 			</div>
-			<p>A publication covering issues of sustainability. The first issue focuses on sustainability in relation to technology, a subject that hits close to home. The second, longer volume, "Blood Oil," covers the <a href="https://en.wikipedia.org/wiki/Conflict_in_the_Niger_Delta">ever ongoing oil conflict in the Niger Delta</a>. Both issues were hand bound; all illustrations are my own.</p>
+			<p>A publication covering issues of sustainability. The first issue focuses on sustainability in relation to technology, a subject that hits close to home. The second, longer volume, &ldquo;Blood Oil,&rdquo; covers the <a href="https://en.wikipedia.org/wiki/Conflict_in_the_Niger_Delta">ever ongoing oil conflict in the Niger Delta</a>. Both issues were hand bound; all illustrations are my own.</p>
             <div class="img-group">
                 <img class="small space_top" src="../images/cover_monthly.jpg"><img class="small space_top" src="../images/monthly4.jpg">
                 <img class="big" src="../images/monthly6.jpg">
@@ -30,7 +30,7 @@
 		<section id="nextProject">
 			<div class="header">
 				<a href="supertranspositions.html">
-					<p>next project</p>
+					<p>&#x21E8;</p>
 					<h2 class="selectedHeader">Supertranspositions</h2>
 					<h3 class="skills">branding, creative coding, web</h3>
 				</a>
