--- a/work/automatab.html
+++ b/work/automatab.html
@@ -14,7 +14,7 @@
 				<h2 class="selectedHeader">Automatab</h2>
 				<h3 class="skills">creative coding, web</h3>
 			</div>
-			<p>A new tab page for Google Chrome that animates unique patterns using cellular automata. It automatically turns to night more&mdash;darker colours&mdash;after sundown, and exists to add a pop of fun and colour to the browsing experience. (You may recognize it as a variation of the background of this site).</p>
+			<p>A new tab page for Google Chrome that animates unique patterns using cellular automata. It automatically turns to night mode&mdash;darker colours&mdash;after sundown, and exists to add a pop of fun and colour to the browsing experience.</p>
 			<p>Install it <a href="https://chrome.google.com/webstore/detail/automatab-%E2%80%94-a-new-tab-pag/lmhppbimjgjafkdhkpmgolplbgmliedl?hl=en">here</a>!</p>
 			<div class="img-group">
                 <img class="big lazy" src="../images/180430_newtab-1.png">     
@@ -25,7 +25,7 @@
 		<section id="nextProject">
 			<div class="header">
 				<a href="ardent.html">
-					<p>next project</p>
+					<p>&#x21E8;</p>
 					<h2 class="selectedHeader">Ardent</h2>
 					<h3 class="skills">editorial, illustration, print</h3>
 				</a>
