--- a/work/newnewyork.html
+++ b/work/newnewyork.html
@@ -15,12 +15,12 @@
 				<h2 class="selectedHeader">Representing life in Brooklyn with a 3D-printed souvenir.</h2>
 				<h3 class="skills">3d modeling, rendering</h3>
 			</div>
-			<p class="intro">For their fall 2017 exhibition, Storefront for Art and Architecture asked a selection of New York City design studios to each make a model representating a zone of the city. Midnight Commercial was tasked with Brooklyn Community Board 2, an area encompassing Fort Greene, Clinton Hill, Brooklyn Heights, and the Brooklyn Navy Yard amongst others.</p>
+			<p>For their fall 2017 exhibition, Storefront for Art and Architecture asked a selection of New York City design studios to each make a model representating a zone of the city. Midnight Commercial was tasked with Brooklyn Community Board 2, an area encompassing Fort Greene, Clinton Hill, Brooklyn Heights, and the Brooklyn Navy Yard amongst others.</p>
             <div class="img-group">
                 <img class="big" src="../images/newnewyork_poster.jpg">
             </div>
             <p>To represent the every day life in these neighbourhoods, we put together an assembly kit of items including the two iconic bridges, Pratt, MTA train cars, bagels, delivery guys, a park inspired by Fowler Square, and&mdash;my personal but painful favourite&mdash;a bike with stolen parts.</p>
-            <p>For additional information, images, and press, visit <a href="http://midnightcommercial.com/project/souvenirs/" target="_blank">Midnight Commercial's page</a>.</p>
+            <p>For additional information, images, and press, visit <a href="http://midnightcommercial.com/project/souvenirs/" target="_blank">Midnight Commercial&rsquo;s page</a>.</p>
             <div class="img-group">
                 <img class="small" src="../images/newnewyork_e.png"><img class="small" src="../images/newnewyork_n.png">
                 <img class="small" src="../images/newnewyork_w.png"><img class="small" src="../images/newnewyork_s.png">
@@ -31,10 +31,10 @@
 		<section id="nextProject">
 			<div class="header">
 				<a href="alphabet.html">
-					<p>next project</p>
+					<p>&#x21E8;</p>
 					<h3 class="title">Alphabet Iteration</h3>
 					<h2 class="selectedHeader">A typographic experiment.</h2>
-					<h3 class="skills">typography, creative coding, print, interactive</h3>
+					<h3 class="skills">typography, creative coding, print</h3>
 				</a>
 			</div>
 		</section>
