--- a/work/patron.html
+++ b/work/patron.html
@@ -11,13 +11,12 @@
     <body>
 		<section id="fullProject">
 			<div class="header">
-				<h3 class="title">The Patron Experience</h3>
-				<h2 class="selectedHeader">Educating customers on Patron tequila in augmented reality.</h2>
+				<h3 class="title">The Patrón Experience</h3>
+				<h2 class="selectedHeader">Educating customers on Patrón tequila in augmented reality.</h2>
 				<h3 class="skills">user experience, visual design, 3d</h3>
 			</div>
-			<p>In collaboration with <a href="http://mbooth.com/">M Booth</a>, <a href="http://midnightcommercial.com/">Midnight Commercial</a> created an augmented reality application for Patrón using Apple&rsquo;s freshly released ARKit. The application brings the Patrón Hacienda to the user&rsquo;s tabletop, complete with agave field and jimadors, 4 virtual bottles of Patrón tequila and an animated bartender to talk the user through the tasting notes of each expression.</p>
-            <p>I lead the creation of images for the pitch, and was later responsible for the user experience and design from onboarding to the AR enhanced image capture feature.</p>
-            <p>For additional information and press, check out <a href="http://midnightcommercial.com/project/the-patron-experience/" target="_blank">Midnight Commercial&rsquo;s documentation</a>.</p>
+			<p>In collaboration with <a href="http://mbooth.com/">M Booth</a>, <a href="http://midnightcommercial.com/">Midnight Commercial</a> created an augmented reality application for Patrón using Apple&rsquo;s freshly released ARKit. The application brings a virtual miniature of the Patrón Hacienda to the user&rsquo;s tabletop, complete with agave field and jimadors, 4 virtual bottles of Patrón tequila and an animated bartender to tell the user about each expression.</p>
+            <p>I was responsible for the user experience and design, from onboarding to the AR enhanced image capture feature.</p>
             <div class="img-group">
                 <img class="big" src="../images/patron_age-gate.png">
                 <img class="big" src="../images/patron_bartender.jpg">
@@ -28,10 +27,10 @@
 		<section id="nextProject">
 			<div class="header">
 				<a href="newnewyork.html">
-					<p>next project</p>
-					<h3 class="title">The Patron Experience</h3>
-					<h2 class="selectedHeader">Educating customers on Patron tequila in augmented reality.</h2>
-					<h3 class="skills">user experience, visual design, 3d</h3>
+					<p>&#x21E8;</p>
+					<h3 class="title">New New York Icons</h3>
+					<h2 class="selectedHeader">Representing life in Brooklyn with a 3D-printed souvenir.</h2>
+					<h3 class="skills">3d modeling, rendering</h3>
 				</a>
 			</div>
 		</section>
