--- a/work/sol3.html
+++ b/work/sol3.html
@@ -11,31 +11,32 @@
     <body>
 		<section id="fullProject">
 			<div class="header">
-				<h3 class="title">Gentex Vehicle Simulator w/ Midnight Commercial</h3>
-				<h2 class="selectedHeader">Showing off Gentex technologies in a user-friendly set-up.</h2>
-				<h3 class="skills">user experience, visual design</h3>
+				<h3 class="title">Sol-3</h3>
+				<h2 class="selectedHeader">A dystopian illustrated art book.</h2>
+				<h3 class="skills">illustration, print</h3>
 			</div>
-			<blockquote>Sol-3 is only eight thousand miles in diameter, which is almost a negligible dimension in the great vastness of space. It was so extraordinarily well invented and designed that to the best of our knowledge its residents have been on board it for two million years not even knowing that they were on board a ship. But these residents of Sol-3 are not going to be able to operate their spaceship successfully nor for much longer unless they come to see it as a whole spaceship and their fate as common. It has to be everybody or nobody. <br><br> —adapted from Buckminster Fuller, &ldquo;Operating Manual for Spaceship Earth&rdquo;</blockquote>
-                <p>Sol-3 is an accordion fold art-book of one continuous illustration. It was illustrated in felt-tip marker and later printed duotone on a risograph printer. Each page is 8.5x14" and illustrated at a one-to-one ratio. When open flat, it measures 8.5x126".</p>
-                <div class="img-group">
-                    <img class="big" src="../images/microhabitats0.jpg">
-                    <img class="big" src="../images/microhabitats1.jpg">
-                    <img class="big" src="../images/microhabitats2.jpg">
-                    <img class="big" src="../images/microhabitats3.jpg">
-                    <img class="big" src="../images/microhabitats4.jpg">
-                    <img class="big" src="../images/microhabitats5.jpg">
-                    <img class="big" src="../images/microhabitats6.jpg">
-                    <img class="big" src="../images/microhabitats7.jpg">
-                    <img class="big" src="../images/microhabitats8.jpg">
-                    <img class="big" src="../images/microhabitats9.jpg">
-                </div>
+            <p>Sol-3 (short for &ldquo;Solar 3,&rdquo; the third planet from the sun) is an illustrated art book featuring an urban landscape in which everything is trash. It is an accordion fold book of one continuous illustration that I drew by hand in felt-tip marker, scanned, and printed on a risograph printer. Each page is 8.5x14" and illustrated at a one-to-one ratio; when open flat, it measures 8.5x126".</p>
+			<p class="blockquote">Sol-3 is only eight thousand miles in diameter, which is almost a negligible dimension in the great vastness of space. It was so extraordinarily well invented and designed that to the best of our knowledge its residents have been on board it for two million years not even knowing that they were on board a ship. But these residents of Sol-3 are not going to be able to operate their spaceship successfully nor for much longer unless they come to see it as a whole spaceship and their fate as common. It has to be everybody or nobody. <br><br>—adapted from Buckminster Fuller, &ldquo;Operating Manual for Spaceship Earth&rdquo;</p>
+            <div class="img-group">
+            	<img class="big" src="../images/180521-sol3-full.png">
+                <img class="big" src="../images/microhabitats0.jpg">
+                <img class="big" src="../images/microhabitats1.jpg">
+                <img class="big" src="../images/microhabitats2.jpg">
+                <img class="big" src="../images/microhabitats3.jpg">
+                <img class="big" src="../images/microhabitats4.jpg">
+                <img class="big" src="../images/microhabitats5.jpg">
+                <img class="big" src="../images/microhabitats6.jpg">
+                <img class="big" src="../images/microhabitats7.jpg">
+                <img class="big" src="../images/microhabitats8.jpg">
+                <img class="big" src="../images/microhabitats9.jpg">
+            </div>
 		</section>
 		<section id="nextProject">
 			<div class="header">
 				<a href="sproutkernel.html">
-					<p>next project</p>
+					<p>&#x21E8;</p>
 					<h3 class="title">Sprout & Kernel</h3>
-					<h2 class="selectedHeader">Mock rebranding of a nut-based cheese company.</h2>
+					<h2 class="selectedHeader">A new visual identity for a nut-based cheese company.</h2>
 					<h3 class="skills">branding, lettering, web design</h3>
 				</a>
 			</div>
