--- a/work/sproutkernel.html
+++ b/work/sproutkernel.html
@@ -12,10 +12,10 @@
 		<section id="fullProject">
 			<div class="header">
 				<h3 class="title">Sprout & Kernel</h3>
-				<h2 class="selectedHeader">Mock rebranding of a nut-based cheese company.</h2>
+				<h2 class="selectedHeader">A new visual identity for a nut-based cheese company.</h2>
 				<h3 class="skills">branding, lettering, web design</h3>
 			</div>
-			<p>Mock re-branding of Sprout & Kernel, an artisinal vegan cheese company based in Australia. I drew the logotype, designed packaging, and mocked up a new website. Photography is pulled from various blogs that&rsquo;ve featured their products, and their social media.</p>
+			<p>Sprout & Kernel is an artisinal vegan cheese company based in Australia. I&rsquo;ve read only good things about their product, but found their identity looked a little out-dated, so as an excercise for myself, I gave them a new visual identity that feels a little more current. I drew the logotype, designed packaging, and mocked up a new website. Photography is pulled from various blogs that&rsquo;ve featured their products, and their social media.</p>
 			<div class="img-group">
                 <img class="big lazy" src="../images/180430-mockup.png">     
                 <img class="big lazy" src="../images/180430-Sprout-Kernel_Section-1.png">     
@@ -34,7 +34,7 @@
 		<section id="nextProject">
 			<div class="header">
 				<a href="airquality.html">
-					<p>next project</p>
+					<p>&#x21E8;</p>
 					<h3 class="title">Air Quality</h3>
 					<h2 class="selectedHeader">Painting with live air pollution data from around the world.</h2>
 					<h3 class="skills">creative coding, data, web design</h3>
