changed canvas interaction, added new images to AirQuality

--- a/work/airquality.html
+++ b/work/airquality.html
@@ -16,8 +16,11 @@
 				<h3 class="skills">creative coding, data, web design</h3>
 			</div>
 			<p>A experimental drawing tool that uses real-time <a href="https://en.wikipedia.org/wiki/Air_quality_index">AQI (Air Quality Index)</a> data from around the world. Rather than letting users choose the size and colour of their brush, they instead choose one of the listed cities, and the air quality in that city <span class="italic">at that moment</span> determines the brush&rsquo;s qualities. Cleaner air results in a small pale brush, more polluted air results in a broad dark cloud.</p>
+			<p><a href="lauriewaxman.com/projects/airquality">Try it out.</a></p>
 			<div class="img-group">
-                <img class="big" src="../images/airquality.jpg">     
+                <img class="big" src="../images/180617_AQI-01.png">     
+                <img class="big" src="../images/180617_AQI-02.png">     
+                <img class="big" src="../images/180617_AQI-03.png">     
             </div>
 		</section>
 		<section id="nextProject">
