added new project, added web frarames to images

--- a/index.html
+++ b/index.html
@@ -88,7 +88,15 @@
 						<h3 class="skills">creative coding, data, web design</h3>
   					</a>
 				</div>
-	      		<div class="project right">
+				<div class="project right">
+      				<a href="work/type.html">
+						<img src="images/180626_type_00.png" alt="">
+						<h3 class="title">Experimental Type</h3>
+						<h2 class="selectedHeader">A series of experiments in interactive web typography.</h2>
+						<h3 class="skills">typography, creative coding, web</h3>
+  					</a>
+				</div>
+	      		<div class="project left">
 		      		<a id="viewMore" href="work.html">
 		      			<h3>View All</h3>
 		      		</a>      			
