--- a/work.html
+++ b/work.html
@@ -13,19 +13,19 @@
       		<div class="moreWork">
       		<h3 class="sectionTitle">Selected Work</h3>
 				<div class="project">
-					<a href="work/gentex.html">
-						<img src="images/gentex-00s.png" alt="">
-						<h3 class="title">Gentex Vehicle Simulator</h3>
-						<h2 class="selectedHeader">Showing off Gentex technologies in an immersive experience.</h2>
-						<h3 class="skills">user experience, visual design</h3>
-					</a>
-				</div>
-				<div class="project">
 					<a href="work/bindthisbook.html">
 						<img src="images/bindthisbook-00s.png" alt="">
 						<h3 class="title">Bind This Book</h3>
 						<h2 class="selectedHeader">Bookbinding at its most #meta.</h2>
 						<h3 class="skills">editorial, illustration, ux, print</h3>
+					</a>
+				</div>
+				<div class="project">
+					<a href="work/gentex.html">
+						<img src="images/gentex-00s.png" alt="">
+						<h3 class="title">Gentex Vehicle Simulator</h3>
+						<h2 class="selectedHeader">Showing off Gentex technologies in an immersive experience.</h2>
+						<h3 class="skills">user experience, visual design</h3>
 					</a>
 				</div>
 				<div class="project">
@@ -82,6 +82,14 @@
 						<h3 class="title">Air Quality</h3>
 						<h2 class="selectedHeader">Painting with live air pollution data from around the world.</h2>
 						<h3 class="skills">creative coding, data, web design</h3>
+  					</a>
+				</div>
+				<div class="project">
+      				<a href="work/type.html">
+						<img src="images/180626_type_00.png" alt="">
+						<h3 class="title">Experimental Type</h3>
+						<h2 class="selectedHeader">A series of experiments in interactive web typography.</h2>
+						<h3 class="skills">typography, creative coding, web</h3>
   					</a>
 				</div>
       		</div>
