--- a/work/flandill.html
+++ b/work/flandill.html
@@ -17,18 +17,21 @@
 			</div>
 			<p>Everything we do, no matter how minute it may seem, effects our planet. The trouble is we don&rsquo;t often see it. Our oceans are filling with plastic, whole species are getting wiped out directly from human impact. Some people ask why it matters, and in the grand scheme of things, it may not—the Earth will inevitably heal itself, but to that individual turtle, to that individual bird, to that individual bear, it&rsquo;s everything. It&rsquo;s all that matters. Flandill is an attempt to bring visibility to this situation. It&rsquo;s a website that hosts a generative animation of a fictional planet that is directly effected by its visitors.</p>
             <div class="img-group">
+            	<img class="big" src="../images/180627_flandill-landing.png">
+            	<img class="big lazy" src="../images/_frame_top.png">
                 <video class="big" controls="controls" autoplay="true" loop="true" name="Flandill Good Health" src="../images/deebs_happy.mov"></video>
+				<img class="big lazy" src="../images/_frame_bottom.png">
             </div>
 			<h3 class="title">The Ecosystem</h3>
 			<p>Every visitor to the site adds pollutants to Flandill&rsquo;s atmosphere, and every day it goes without visitation it heals a little. The landscape visibly changes as a result, from a scene full of vivid colours, lush with flora, to a scene dull and void of life. There&rsquo;s not a whole lot of interaction (the point being that even inaction is also a choice that has consequences), but users can click around the scene, to &ldquo;pick&rdquo; flowers, or &ldquo;pet&rdquo; the creatures that live there. Picking the plants effects future of the landscape, which effects the survival of the creatures—they rely on the plants for food. Petting the creatures frightens them, effecting their individual wellbeing and lifespan. The creatures are an endangered species; there&rsquo;s a set number of them, and they have only one life each. If a creature, it dies for good.</p>
             <div class="img-group">
-                <img class="big" src="../images/flandill_ok.jpg">
+                <img class="big" src="../images/180627_flandill-ok.png">
             </div>
            	<h3 class="title">The Tech</h3>
 			<p>Somewhat ironically, by visiting the site, there are real environmental effects on the planet. It takes vast amounts of energy to power the internet, to keep server farms cool—power that is often from non-renewable rescources (though we&rsquo;re getting better). To counteract this real life consqeuence, Flandill (and my personal site that you&rsquo;re currently on) is served by a <a href="https://asmallorange.com/">sustainable web host</a>.</p>
 			<p>The animation is created in an HTML canvas element, using a small felt-tip pen style illustration library that I wrote for myself (conceptually similar to P5js) to give it a more hand drawn feel.</p>
             <div class="img-group">
-                <img class="big" src="../images/flandill_dead.jpg">
+                <img class="big" src="../images/180627_flandill-dead.png">
             </div>
 		</section>
 		<section id="nextProject">
