--- a/work/patron.html
+++ b/work/patron.html
@@ -18,9 +18,9 @@
 			<p>In collaboration with <a href="http://mbooth.com/">M Booth</a>, <a href="http://midnightcommercial.com/">Midnight Commercial</a> created an augmented reality application for Patrón using Apple&rsquo;s freshly released ARKit. The application brings a virtual miniature of the Patrón Hacienda to the user&rsquo;s tabletop, complete with agave field and jimadors, 4 virtual bottles of Patrón tequila and an animated bartender to tell the user about each expression.</p>
             <p>I was responsible for the user experience and design, from onboarding to the AR enhanced image capture feature.</p>
             <div class="img-group">
-                <img class="big" src="../images/patron_age-gate.png">
-                <img class="big" src="../images/patron_bartender.jpg">
-                <img class="big" src="../images/patron_frame.jpg">
+                <img class="big" src="../images/180627_Patron-1.png">
+                <img class="big" src="../images/180627_Patron-2.png">
+                <img class="big" src="../images/180627_Patron-3.png">
                 <img class="big" src="../images/patron_extra-anejo.jpg">
             </div>
 		</section>
